@@ -5,6 +5,7 @@ liberasurecode (1.2.0-1) UNRELEASED; urgency=medium
   * Standards-Version is 3.9.8 now (no change)
   * Removed reproducible-build.patch and use-full-soname.patch
     (Applied upstream)
+  * Rebased disable-sse.patch
 
  -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:23:28 +0200
 
